# poi-api/src/main/java/com/henmerlin/poi/api/AssetApiController.java
@@ -2,9 +2,11 @@ package com.henmerlin.poi.api;
 
 import java.math.BigDecimal;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.henmerlin.poi.asset.adapter.AssetAdapter;
 import com.henmerlin.poi.asset.service.AssetFilter;
 import com.henmerlin.poi.asset.service.AssetService;
 import io.swagger.annotations.*;
+import java.io.IOException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
@@ -24,27 +26,27 @@ import org.springframework.beans.factory.annotation.Autowired;
 
 @Controller
 public class AssetApiController implements AssetApi {
-
+    
     private static final Logger log = LoggerFactory.getLogger(AssetApiController.class);
-
+    
     private final ObjectMapper objectMapper;
-
+    
     private final HttpServletRequest request;
-
+    
     @Autowired
     private AssetService service;
-
+    
     @Autowired
     public AssetApiController(ObjectMapper objectMapper, HttpServletRequest request) {
         this.objectMapper = objectMapper;
         this.request = request;
     }
-
+    
     public ResponseEntity<Void> addAsset(@ApiParam(value = "Asset object that needs to be added to the API", required = true) @Valid @RequestBody Asset body) {
         String accept = request.getHeader("Accept");
         return new ResponseEntity<Void>(HttpStatus.NOT_IMPLEMENTED);
     }
-
+    
     public ResponseEntity<List<Asset>> getAssetByFilter(@ApiParam(value = "Key of Asset") @Valid @RequestParam(value = "assetKey", required = false) String assetKey, @ApiParam(value = "Initial POI Event Date") @Valid @RequestParam(value = "initialDate", required = false) BigDecimal initialDate, @ApiParam(value = "Final POI Event Date") @Valid @RequestParam(value = "finalDate", required = false) BigDecimal finalDate) {
         try {
             final AssetFilter filter = new AssetFilter();
@@ -57,19 +59,41 @@ public class AssetApiController implements AssetApi {
             return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
-
+    
     public ResponseEntity<Asset> getAssetById(@ApiParam(value = "ID of Asset to return", required = true) @PathVariable("assetId") Long assetId) {
         try {
-            return new ResponseEntity<>(service.getAssetById(assetId.intValue()), HttpStatus.OK);
+            return new ResponseEntity<>(AssetAdapter.adaptEntity(service.findById(assetId.intValue())), HttpStatus.OK);
         } catch (Exception e) {
             log.error("Couldn't serialize response for content type application/json", e);
             return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
-
+    
     public ResponseEntity<Void> updateAsset(@ApiParam(value = "Asset object that needs to be added", required = true) @Valid @RequestBody Asset body) {
         String accept = request.getHeader("Accept");
-        return new ResponseEntity<Void>(HttpStatus.NOT_IMPLEMENTED);
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
     }
-
+    
+    @Override
+    public ResponseEntity<Void> deleteAsset(@ApiParam(value = "Asset id to delete", required = true) @PathVariable("assetId") Long assetId) {
+        try {
+            service.deleteById(assetId.intValue());
+            return new ResponseEntity<>(HttpStatus.OK);
+        } catch (Exception e) {
+            return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+        
+    }
+    
+    @Override
+    public ResponseEntity<List<Asset>> findAllAssets() {
+        try {
+            return new ResponseEntity(AssetAdapter.adaptEntities(service.findAll()), HttpStatus.OK);
+        } catch (Exception e) {
+            log.error("Couldn't serialize response for content type application/json", e);
+            return new ResponseEntity<List<Asset>>(HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+        
+    }
+    
 }
